# storage/api-docs/api-docs.json
@@ -537,6 +537,54 @@
                     }
                 }
             }
+        },
+        "/api/v1/webhook/{identifier}/count-products": {
+            "get": {
+                "tags": [
+                    "Webhook"
+                ],
+                "summary": "Count products in a category for webhook",
+                "operationId": "37dbec01dc7033e78ee242abe7fb0c6c",
+                "parameters": [
+                    {
+                        "name": "identifier",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "description": "Category ID or name",
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "category": {
+                                            "description": "Category name",
+                                            "type": "string"
+                                        },
+                                        "product_count": {
+                                            "description": "Number of products in the category",
+                                            "type": "integer"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "content": {
+                            "application/json": {}
+                        }
+                    }
+                }
+            }
         }
     }
 }
